# Dynamics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asm.S  build.sh  gui_design.fbp  makefile  style.txt  test.out
app/: CMakeLists.txt  font.cpp  free_type_library_singleton.h  text_renderer.cpp
app/src/include/app/: app.h
asm/: CMakeLists.txt
asm/include/asm/: assembler.h
asm/src/: asm.cpp  assembler.cpp
compiler/: CMakeLists.txt
compiler/include/compiler/: expression_parser.h  function.h
compiler/include/compiler/ast/: AST.h
compiler/include/compiler/front/: driver.h
compiler/include/compiler/ir/: symbol.h
compiler/src/: config.h.in  expression_parser.cpp
compiler/src/ast/: AST.cpp  binary_addition_operator_node.cpp  binary_multiplication_operator_node.cpp  binary_subtraction_operator_node.cpp  division_operator_node.cpp  exponentiation_operator_node.cpp  integer_number_leaf_node.cpp  node.cpp  number_leaf_node.cpp  polyadic_addition_operator_node.cpp  polyadic_multiplication_operator_node.cpp  polyadic_operator_node.cpp  unary_minus_operator_node.cpp  variable_leaf_node.cpp
compiler/src/ast/visitor/comparator/: std_node_comparator.cpp
compiler/src/ast/visitor/dual/: binary_multiplication_dual_visitor.cpp  exponentiation_dual_visitor.cpp  integer_number_dual_visitor.cpp
compiler/src/ast/visitor/mutation/: level_addition_operator_visitor.cpp  level_multiplication_operator_visitor.cpp  pre_canonical_addition_operator_visitor.cpp  pre_canonical_exponentiation_operator_visitor.cpp  pre_canonical_multiplication_operator_identifier_visitor.cpp  pre_canonical_multiplication_operator_visitor.cpp
compiler/src/include/compiler/ast/: binary_subtraction_operator_node.h  division_operator_node.h  exponentiation_operator_node.h  expression_node.h  integer_number_leaf_node.h  leaf_node.h  polyadic_addition_operator_node.h  polyadic_multiplication_operator_node.h  unary_minus_operator_node.h  variable_leaf_node.h
compiler/src/include/compiler/ast/visitor/: dual_parameter_visitor.h  visitor.h
compiler/src/include/compiler/ast/visitor/comparator/: canonical_node_comparator.h  std_node_comparator.h
compiler/src/include/compiler/ast/visitor/dual/: exponentiation_dual_visitor.h  number_dual_visitor.h  polyadic_addition_dual_visitor.h  polyadic_multiplication_dual_visitor.h
compiler/src/include/compiler/ast/visitor/mutation/: pre_canonical_multiplication_operator_identifier_visitor.h
compiler/src/include/compiler/front/: buffer_attributes.h
debug/: CMakeLists.txt
debug/src/: app.cpp  main.cpp
debug/src/include/debug/: app.h
gl/: CMakeLists.txt
gl/include/gl/: buffer.h  font.h  program.h  sampler.h  shader.h  text_renderer.h  texture.h  vertex_array.h
gl/src/: buffer.cpp  config.h.in  font.cpp  free_type_library_singleton.cpp  program.cpp  sampler.cpp  shader.cpp  text_renderer.cpp  texture.cpp  vertex_array.cpp
gl/src/include/gl/: free_type_library_singleton.h
glad/: CMakeLists.txt
gui/: CMakeLists.txt  common.h  dynamical_frame.cpp  dynamical_frame.h  generated.h  isocline_dialog.cpp  limit_cycle_bifurcation_dialog.h  model.cpp  model.h  saddle_node_bifurcation_dialog.cpp  singular_point_dialog.cpp
gui/include/gui/: app.h  common.h
gui/resources/include/gui/: generated.cpp  generated.h
gui/src/: app.cpp  config.h.in  console_frame.cpp  constants.cpp  dynamical_dialog.cpp  dynamical_frame.cpp  generated.cpp  hopf_bifurcation_dialog.cpp  model.cpp  parameter_dialog.cpp  parameter_frame.cpp  saddle_connection_bifurcation_dialog.cpp  separatrix_dialog.cpp
gui/src/include/gui/: console_frame.h  dynamical_frame.h  generated.h  hopf_bifurcation_dialog.h  model.h  parameter_dialog.h  parameter_frame.h  solution_dialog.h
mac_build/: Info.plist
math/: CMakeLists.txt
math/include/math/: complex.h  eigenvalue.h  matrix.h  matrix_2x2.h  matrix_3x3.h  matrix_4x4.h  poly_matrix.h  poly_root.h  polynomial.h  quaternion.h  square_matrix.h  util.h  vector.h  vector2d.h  vector3d.h  window2d.h  window3d.h
math/src/: complex.cpp  eigenvalue.cpp  matrix.cpp  matrix_2x2.cpp  matrix_3x3.cpp  matrix_4x4.cpp  poly_matrix.cpp  poly_root.cpp  polynomial.cpp  quaternion.cpp  square_matrix.cpp  util.cpp  vector.cpp  vector2d.cpp  vector3d.cpp  window2d.cpp  window3d.cpp
math2/: CMakeLists.txt
math2/doc/: mainpage.md
math2/include/math/: abelian_group.h  commutative_monoid.h  commutative_ring.h  eq.h  field.h  group.h  integer.h  magma.h  module.h  monoid.h  ring.h  semigroup.h  vector_space.h
math2/src/: integer.cpp  main.cpp
math2/test/: integer_test.cpp
parser/: CMakeLists.txt
parser/include/parser/: common.h  grammar.h  lr_parser.h  malformed_grammar_exception.h  syntax_exception.h
parser/src/: grammar.cpp  lr_parser.cpp  syntax_exception.cpp
regex/: CMakeLists.txt
regex/include/regex/: lexer.h  lexer_builder.h  malformed_pattern_exception.h  nfa.h  regex.h
regex/src/: dfa.cpp  lexer.cpp  lexer_builder.cpp  nfa.cpp  regex.cpp
regex/src/include/regex/: common.h  dfa.h
regex/test/: regex_test.cpp
resources/apple_bundle/: app.plist  icon.icns
resources/gl/: 2d_renderer.frag  2d_renderer.vert  frag2d.frag  frag3d.frag  fragment.frag  path_3d.frag  path_3d.vert  text_renderer.frag  text_renderer.vert  vert2d.vert  vert3d.vert  vertex.vert
resources/linux/: xyz.ezstein.dynsolver.desktop
resources/windows/: app.rc
src/: app.cpp  constants.cpp  constants.h  main.cpp
src/app/: app.cpp  app.h  app_state.cpp  app_state.h  app_traits.h
src/asm/: asm.cpp  asm.h  assembler.cpp
src/compiler/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  compiler_data.h  driver.cpp  driver.h  expression_parser.cpp  expression_parser.h  function.h  lexer.cpp  lexer.h  main.cpp  nodes.h  parser.cpp  parser.h  reg_def.h  symbol.cpp  symbol.h  token.cpp  token.h
src/concurrency/: concurrent_queue.h  thread_pool.cpp  thread_pool.h
src/fractal_tmp/: app.cpp  app.h  app_traits.h  custom_events.cpp  custom_events.h  render_panel.cpp  render_panel.h  top_frame.cpp  (+1 more)
util/: CMakeLists.txt
util/include/util/: util.h
util/src/: util.cpp  util.cpp~
(+273 files in other folders)
